Fixed frontend issue not showing

--- a/assets/src/styles/blocks/Accordion.scss
+++ b/assets/src/styles/blocks/Accordion.scss
@@ -1,98 +1,127 @@
-.accordion-style-solid {
-  background-color: $dark-blue;
-  color: $white;
-}
+// .accordion-style-minimal {
+//   background: #eee7e754;
+//   color: $black;
+//   -webkit-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
+//   -moz-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
+//   box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
+// }
 
-.accordion-style-minimal {
-  background:#eee7e754;
-  color: $black;
-  -webkit-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.31);
-  -moz-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.31);
-  box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.31);
-}
-
-.accordion-style-gradient {
-  background-image: linear-gradient(to right, #004569, #015177, #015e85, #016b94, #0079a2);
-  color: $white;
-  -webkit-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.31);
-  -moz-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.31);
-  box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.31);
-}
+// .accordion-style-gradient {
+//   background-image: linear-gradient(to right, #004569, #015177, #015e85, #016b94, #0079a2);
+//   color: $white;
+//   -webkit-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
+//   -moz-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
+//   box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
+// }
 
 .accordion-block {
   text-align: left;
   font-family: $roboto;
   margin-top: $space-xl;
   margin-bottom: $space-lg;
+  font-size: inherit;
+  padding-bottom: 40px;
 
-  // .accordion .card-header:after {
-  //   font-family: 'FontAwesome';
-  //   content: "\f068";
-  //   float: right;
-  // }
+  .accordion-content {
+    display: flex;
+    flex-direction: column;
 
-  // .accordion .card-header.collapsed:after {
-  //   /* symbol for "collapsed" panels */
-  //   content: "\f067";
-  // }
+    // &:hover+.panel {
+    //   display: block;
+    //   transition-timing-function: ease-out;
 
-  .panel {
-    padding: 0 18px;
-    display: none;
-    background-color: white;
-    color: $black;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
+    // }
+
+    .accordion {
+      cursor: pointer;
+      height: auto;
+      position: relative;
+      // width: 100%;
+      // padding: 0 4%;
+      // border: none;
+      // text-align: left;
+      // outline: none;
+      // font-size: $font-size-md;
+      // transition: flex 0.3s ease-out;
+      // color: $white;
+      // border-radius: 3px;
+      // word-wrap: break-word;
+
+      @include mobile-only {
+        font-size: 1rem;
+      }
+
+      .accordion-headline {
+        // height: fit-content;
+        background-color: $dark-blue;
+        color: $white;
+        margin: 1rem 0 0;
+        padding: .5rem 1rem .8rem 1.5rem;
+        line-height: 1.3;
+        min-height: 4rem;
+
+
+
+        &:before {
+          position: sticky;
+          content: "";
+          width: 16px;
+          height: 16px;
+          border: solid white;
+          border-width: 0 4px 4px 0;
+          display: inline-block;
+          padding: 0;
+          font-weight: 900;
+          float: right;
+          margin: 15px 20px 15px 11px;
+          transform: rotate(-45deg);
+          -webkit-transform: rotate(-45deg);
+        }
+
+        &:hover:before {
+          transform: rotate(45deg);
+          -webkit-transform: rotate(45deg);
+        }
+
+      }
+
+    }
+
+    // .active, .accordion:hover {
+    //   background-color: #ccc; 
+    // }
+
+    .panel {
+      padding: .7rem 1.2rem ;
+      display: none;
+      background-color: white;
+      color: $black;
+      overflow: hidden;
+      -webkit-transition: all .3s ease .15s;
+      -moz-transition: all .3s ease .15s;
+      -o-transition: all .3s ease .15s;
+      -ms-transition: all .3s ease .15s;
+      transition: all .3s ease .15s;
+    }
+
+    .accordion-text {
+      padding: .1rem 2rem 0 0;
+
+      .btn-accordion {
+        line-height: 2;
+        margin: 0 0 40px 0;
+
+      }
+
+    }
+
+    .drop-shadow {
+      -webkit-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
+      -moz-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
+      box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
+    }
+
   }
 
-  button.accordion, .accordion {
-    background: rgba(255, 255, 255, 0);
-    cursor: pointer;
-    height: 3rem;
-    width: 100%;
-    padding: 0 4%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: $font-size-md;
-    transition: 0.4s;
-    color: inherit;
-
-  }
-
-  // .active,
-  // .accordion:hover {
-  //   // background-color: #ccc;
-  //   color: aqua;
-  // }
-
-  .accordion:after {
-    content: '\002B';
-    // color: #777;
-    font-weight: bold;
-    float: right;
-    margin-right: 0;
-  }
-
-  .active:after {
-    content: "\2212";
-  }
-  
-
-  .accordion-headline{
-    height: 3rem;
-    background: #eee7e754;
-    margin: 1% 0 0;
-  }
-
-  .accordion-text {
-    padding: 0 4%;
-  }
-
-  .drop-shadow {
-    -webkit-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.31);
-    -moz-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.31);
-    box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.31);
-  }
 
 }
